--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Meshki is a dead-simple, responsive boilerplate to kickstart any responsive project.",
   "main": "src/meshki.css",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "grunt cssmin"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/Qolak/Meshki/issues"
   },
-  "homepage": "https://github.com/Qolak/Meshki#readme"
+  "homepage": "https://github.com/Qolak/Meshki#readme",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^1.0.0"
+  }
 }
