--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/meshki.min.css",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "grunt cssmin"
+    "compile": "grunt cssmin && grunt uglify"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   "homepage": "http://borderliner.ir/meshki",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-cssmin": "^1.0.0"
+    "grunt-contrib-cssmin": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0"
   }
 }
