Removed fonts from main in bower.json

--- a/bower.json
+++ b/bower.json
@@ -12,8 +12,7 @@
   "description": "Meshki is a dead-simple, black-colored, responsive boilerplate to kickstart any responsive project.",
   "main": [
     "dist/meshki.css",
-    "dist/meshki.js",
-    "dist/fonts/Raleway-Regular.ttf"
+    "dist/meshki.js"
   ],
   "keywords": [
     "css",
