--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "meshki",
-  "version": "0.2.0-alpha",
+  "version": "1.0.0",
   "homepage": "http://borderliner.ir/meshki",
   "repository": {
     "type": "git",
