--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/meshki.min.css",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "grunt default"
+    "compile": "grunt default",
+    "watch": "grunt watch"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "grunt-concat-css": "^0.3.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.0",
-    "grunt-contrib-uglify": "^2.0.0"
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
