Restructure and update docs for GitHub Pages

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "meshki",
   "version": "1.4.0",
-  "homepage": "http://meshki.borderliner.ir/",
+  "homepage": "https://borderliner.github.io/Meshki/",
   "repository": {
     "type": "git",
     "url": "https://github.com/Borderliner/Meshki"
