--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "bugs": {
     "url": "https://github.com/Borderliner/Meshki/issues"
   },
-  "homepage": "http://meshki.borderliner.ir/",
+  "homepage": "https://borderliner.github.io/Meshki/",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-concat-css": "^0.3.1",
