--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
   "name": "meshki",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "homepage": "https://borderliner.github.io/Meshki/",
   "repository": {
     "type": "git",
     "url": "https://github.com/Borderliner/Meshki"
   },
   "authors": [
-    "Mohammad Reza Hajianpour <hajianpour.mr@gmail.com> (http://borderliner.ir/)"
+    "Mohammadreza Hajianpour <hajianpour.mr@gmail.com> (http://borderliner.ir/)"
   ],
   "description": "Meshki: A Black-Colored, Responsive Boilerplate for UI Development",
   "main": [
