Change task automation system from Grunt to Gulp

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "meshki",
-  "version": "1.5.1",
+  "version": "2.0.0",
   "description": "Meshki: A Black-Colored, Responsive Boilerplate for UI Development",
   "main": "dist/meshki.min.css",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "grunt default",
-    "watch": "grunt watch"
+    "compile": "gulp",
+    "watch": ""
   },
   "repository": {
     "type": "git",
@@ -20,17 +20,17 @@
     "black"
   ],
   "author": "Borderliner",
-  "license": "MIT",
+  "license": {
+    "type": "Apache-2.0",
+    "url": "http://www.apache.org/licenses/LICENSE-2.0"
+  },
   "bugs": {
     "url": "https://github.com/Borderliner/Meshki/issues"
   },
   "homepage": "https://borderliner.github.io/Meshki/",
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-concat-css": "^0.3.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^1.0.0",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0"
+    "clean-css": "^4.0.8",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.0.3"
   }
 }
