Compress js files using gulp-uglify

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-less": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.4.1",
+    "gulp-uglify": "^2.0.1",
     "gulp-util": "^3.0.8"
   }
 }
