--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "clean-css": "^4.0.8",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.0.3",
-    "gulp-less": "^3.3.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.0.1",
     "gulp-util": "^3.0.8"
