Remove development dependencies of gulp.js

--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "Meshki: A Black-Colored, Responsive Boilerplate for UI Development",
   "main": "dist/meshki.min.css",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp",
-    "compile": "gulp",
-    "watch": "gulp watch"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -28,12 +25,6 @@
   "homepage": "https://borderliner.github.io/Meshki/",
   "devDependencies": {
     "clean-css": "^4.0.8",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^3.0.3",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-uglify": "^2.0.1",
-    "gulp-util": "^3.0.8"
+    "colors": "^1.1.2"
   }
 }
