--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Meshki: A Black-Colored, Responsive Boilerplate for UI Development",
   "main": "dist/meshki.min.css",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node build.js"
   },
   "repository": {
     "type": "git",
