Add functions to compile and minify Meshki

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meshki",
   "version": "2.0.0",
   "description": "Meshki: A Black-Colored, Responsive Boilerplate for UI Development",
-  "main": "dist/meshki.min.css",
+  "main": "build.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build.js"
