Rewrite meshki.js based on airbnb conventions for eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,9 @@
     "extends": "airbnb-base",
     "plugins": [
         "import"
-    ]
+    ],
+    "env": {
+        "browser": true,
+        "node": true
+    }
 }
