--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "build.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node build.js"
+    "compile": "node build.js",
+    "watch": "node build.js --watch",
+    "rebuild-sass": "npm rebuild node-sass --force",
+    "start": "npm run compile"
   },
   "repository": {
     "type": "git",
@@ -33,6 +36,7 @@
     "colors": "^1.1.2",
     "fs-extra": "^3.0.1",
     "node-sass": "^4.5.3",
+    "node-watch": "^0.5.5",
     "uglify-js": "^3.0.15"
   }
 }
