--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "meshki",
-  "version": "1.5.1",
+  "version": "2.0.0",
   "homepage": "https://borderliner.github.io/Meshki/",
   "repository": {
     "type": "git",
@@ -21,5 +21,5 @@
     "boilerplate",
     "black"
   ],
-  "license": "MIT"
+  "license": "Apache-2.0"
 }
