--- a/package.json
+++ b/package.json
@@ -28,15 +28,17 @@
   },
   "homepage": "https://borderliner.github.io/Meshki/",
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.3"
+    "eslint": "^7.17.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1"
   },
   "dependencies": {
-    "colors": "^1.3.3",
-    "fs-extra": "^8.0.1",
-    "node-sass": "^4.12.0",
-    "node-watch": "^0.6.2",
-    "uglify-js": "^3.5.15"
+    "colors": "^1.4.0",
+    "fs-extra": "^9.0.1",
+    "node-sass": "^4.14.1",
+    "node-watch": "^0.7.1",
+    "uglify-js": "^3.12.4"
   }
 }
