--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "extends": "standard",
     "plugins": [
-        "import"
+        "import",
+        "es5"
     ],
     "env": {
         "browser": true,
