--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meshki",
-  "version": "3.0.0-alpha",
+  "version": "3.0.0",
   "description": "Meshki: The most stylish CSS library on planet Earth!",
   "main": "build.js",
   "type": "module",
@@ -22,7 +22,7 @@
     "boilerplate",
     "black"
   ],
-  "author": "Reza Hajianpour <hajianpour.mr@gmail.com>",
+  "author": "Mohammadreza Hajianpour <hajianpour.mr@gmail.com>",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/Borderliner/Meshki/issues"
